updated logo text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <nav class="navbar">
-      <div class="logo">sirNox</div>
+      <div class="logo">Portfolio</div>
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -36,7 +36,7 @@
       <h2>About Me</h2>
       <p>
         I’m a passionate developer focused on building impactful digital products — from modern web platforms to robust mobile apps.
-        With hands-on experience in <strong>React, Flutter, Node.js, and Strapi</strong>, I love creating efficient, API-driven solutions that help people and businesses thrive.
+        With hands-on experience in <strong>Flutter, Laravel, Node.js, and Strapi</strong>, I love creating efficient, API-driven solutions that help people and businesses thrive.
       </p>
     </div>
   </section>
