--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
       <h2>Contact</h2>
       <p>Interested in collaborating or have a project in mind?</p>
       <ul class="contact-list">
-        <li><strong>Email:</strong> <a href="mailto:noeh@example.com">noeh@example.com</a></li>
-        <li><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/your-username">linkedin.com/in/your-username</a></li>
-        <li><strong>GitHub:</strong> <a href="https://github.com/your-username">github.com/your-username</a></li>
+        <li><strong>Email:</strong> <a href="mailto:noahyalla@gmail.com">noahyalla@gmail.com</a></li>
+        <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/noah-yalla-348325103/">linkedin.com/in/your-username</a></li>
+        <li><strong>GitHub:</strong> <a href="https://github.com/noahyalla">github.com/your-username</a></li>
       </ul>
     </div>
   </section>
