added contact details v2

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <p>Interested in collaborating or have a project in mind?</p>
       <ul class="contact-list">
         <li><strong>Email:</strong> <a href="mailto:noahyalla@gmail.com">noahyalla@gmail.com</a></li>
-        <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/noah-yalla-348325103/">linkedin.com/in/your-username</a></li>
-        <li><strong>GitHub:</strong> <a href="https://github.com/noahyalla">github.com/your-username</a></li>
+        <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/noah-yalla-348325103/">linkedin.com/in/noahyalla</a></li>
+        <li><strong>GitHub:</strong> <a href="https://github.com/noahyalla">github.com/noahyalla/a></li>
       </ul>
     </div>
   </section>
