--- a/index.html
+++ b/index.html
@@ -1,94 +1,160 @@
 <!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
-</head>
-<body>
-  <header class="header">
-    <nav class="navbar">
-      <div class="logo">Portfolio</div>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Noah Yalla - Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-    <div class="hero">
-      <div class="hero-content">
-        <div class="profile-image">
-          <img src="assets/images/profile.jpg" alt="Profile Image" />
-        </div>
-        <h1>Hi, I'm <span>Noah</span></h1>
-        <p>Mobile & Web Developer | API Integrator | Innovator</p>
-        <a href="#projects" class="btn-primary">View My Work</a>
-      </div>
-    </div>
-  </header>
+  <body>
+    <header class="header">
+      <nav class="navbar">
+        <div class="logo">Portfolio</div>
 
-  <section id="about">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>
-        I’m a passionate developer focused on building impactful digital products — from modern web platforms to robust mobile apps.
-        With hands-on experience in <strong>Flutter, Laravel, Node.js, and Strapi</strong>, I love creating efficient, API-driven solutions that help people and businesses thrive.
-      </p>
-    </div>
-  </section>
+        <!-- Mobile menu button -->
+        <button class="menu-toggle" id="menu-toggle" aria-label="Toggle menu">☰</button>
 
-  <section id="projects">
-    <div class="container">
-      <h2>Projects</h2>
-      <div class="project-grid">
-        <div class="project-card">
-          <img src="assets/images/project1.jpg" alt="Project 1 Screenshot" />
-          <div class="card-content">
-            <h3>TaskMate Mobile App</h3>
-            <p>Cross-platform task management app built with Flutter, featuring real-time sync and notifications.</p>
-            <a href="https://github.com/your-username/project1" class="btn">View on GitHub</a>
+        <ul class="nav-links" id="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li>
+            <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">🌙</button>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="hero">
+        <div class="hero-content">
+          <div class="profile-image">
+            <img src="assets/images/profile.jpg" alt="Profile Image" />
           </div>
-        </div>
-
-        <div class="project-card">
-          <img src="assets/images/project2.jpg" alt="Project 2 Screenshot" />
-          <div class="card-content">
-            <h3>ShopNow Web App</h3>
-            <p>React & Node.js e-commerce platform with authentication and secure payment integration.</p>
-            <a href="https://github.com/your-username/project2" class="btn">View on GitHub</a>
-          </div>
-        </div>
-
-        <div class="project-card">
-          <img src="assets/images/project3.jpg" alt="Project 3 Screenshot" />
-          <div class="card-content">
-            <h3>Hybrid PWA</h3>
-            <p>Responsive hybrid app built as a progressive web app (PWA) for mobile and desktop users alike.</p>
-            <a href="https://github.com/your-username/project3" class="btn">View on GitHub</a>
-          </div>
+          <h1>Hi, I'm <span>Noah</span></h1>
+          <p>Mobile & Web Developer | API Integrator | Innovator</p>
+          <a href="#projects" class="btn-primary">View My Work</a>
         </div>
       </div>
-    </div>
-  </section>
+    </header>
 
-  <section id="contact">
-    <div class="container">
-      <h2>Contact</h2>
-      <p>Interested in collaborating or have a project in mind?</p>
-      <ul class="contact-list">
-        <li><strong>Email:</strong> <a href="mailto:noahyalla@gmail.com">noahyalla@gmail.com</a></li>
-        <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/noah-yalla-348325103/">linkedin.com/in/noahyalla</a></li>
-        <li><strong>GitHub:</strong> <a href="https://github.com/noahyalla">github.com/noahyalla</a></li>
-      </ul>
-    </div>
-  </section>
+    <section id="about">
+      <div class="container">
+        <h2>About Me</h2>
+        <p>
+          I’m a passionate developer focused on building impactful digital
+          products — from modern web platforms to robust mobile apps. With
+          hands-on experience in <strong>Flutter, Laravel, Node.js, and Strapi</strong>,
+          I love creating efficient, API-driven solutions that help people and
+          businesses thrive.
+        </p>
+      </div>
+    </section>
 
-  <footer>
-    <p>&copy; 2025 Noah Yalla. Built with ❤️ and creativity.</p>
-  </footer>
-</body>
+    <section id="projects">
+      <div class="container">
+        <h2>Projects</h2>
+        <div class="project-grid">
+          <div class="project-card">
+            <img src="assets/images/project1.jpg" alt="Project 1 Screenshot" />
+            <div class="card-content">
+              <h3>TaskMate Mobile App</h3>
+              <p>
+                Cross-platform task management app built with Flutter, featuring
+                real-time sync and notifications.
+              </p>
+              <a href="https://github.com/noahyalla/project1" class="btn"
+                >View on GitHub</a
+              >
+            </div>
+          </div>
+
+          <div class="project-card">
+            <img src="assets/images/project2.jpg" alt="Project 2 Screenshot" />
+            <div class="card-content">
+              <h3>ShopNow Web App</h3>
+              <p>
+                React & Node.js e-commerce platform with authentication and
+                secure payment integration.
+              </p>
+              <a href="https://github.com/noahyalla/project2" class="btn"
+                >View on GitHub</a
+              >
+            </div>
+          </div>
+
+          <div class="project-card">
+            <img src="assets/images/project3.jpg" alt="Project 3 Screenshot" />
+            <div class="card-content">
+              <h3>Hybrid PWA</h3>
+              <p>
+                Responsive hybrid app built as a progressive web app (PWA) for
+                mobile and desktop users alike.
+              </p>
+              <a href="https://github.com/noahyalla/project3" class="btn"
+                >View on GitHub</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="container">
+        <h2>Contact</h2>
+        <p>Interested in collaborating or have a project in mind?</p>
+        <ul class="contact-list">
+          <li>
+            <strong>Email:</strong>
+            <a href="mailto:noahyalla@gmail.com">noahyalla@gmail.com</a>
+          </li>
+          <li>
+            <strong>LinkedIn:</strong>
+            <a href="https://www.linkedin.com/in/noah-yalla-348325103/"
+              >linkedin.com/in/noahyalla</a
+            >
+          </li>
+          <li>
+            <strong>GitHub:</strong>
+            <a href="https://github.com/noahyalla">github.com/noahyalla</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <footer>
+      <p>&copy; 2025 Noah Yalla. Built with ❤️ and creativity.</p>
+    </footer>
+
+    <script>
+      // Mobile Menu Toggle
+      const menuToggle = document.getElementById('menu-toggle');
+      const navLinks = document.getElementById('nav-links');
+      menuToggle.addEventListener('click', () => {
+        navLinks.classList.toggle('active');
+      });
+
+      // Theme Toggle
+      const themeToggle = document.getElementById('theme-toggle');
+      const body = document.body;
+
+      // Load saved theme
+      if (localStorage.getItem('theme') === 'dark') {
+        body.classList.add('dark-mode');
+        themeToggle.textContent = '☀️';
+      }
+
+      themeToggle.addEventListener('click', () => {
+        body.classList.toggle('dark-mode');
+        const isDark = body.classList.contains('dark-mode');
+        themeToggle.textContent = isDark ? '☀️' : '🌙';
+        localStorage.setItem('theme', isDark ? 'dark' : 'light');
+      });
+    </script>
+  </body>
 </html>
