added buttons and styles

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 Cross-platform task management app built with Flutter, featuring
                 real-time sync and notifications.
               </p>
-              <a href="https://github.com/noahyalla/project1" class="btn"
+              <a href="https://github.com/noahyalla/project1" class="btn-primary"
                 >View on GitHub</a
               >
             </div>
@@ -81,7 +81,7 @@
                 React & Node.js e-commerce platform with authentication and
                 secure payment integration.
               </p>
-              <a href="https://github.com/noahyalla/project2" class="btn"
+              <a href="https://github.com/noahyalla/project2" class="btn-primary"
                 >View on GitHub</a
               >
             </div>
@@ -95,7 +95,7 @@
                 Responsive hybrid app built as a progressive web app (PWA) for
                 mobile and desktop users alike.
               </p>
-              <a href="https://github.com/noahyalla/project3" class="btn"
+              <a href="https://github.com/noahyalla/project3" class="btn-primary"
                 >View on GitHub</a
               >
             </div>
