changed email address

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <ul class="contact-list">
           <li>
             <strong>Email:</strong>
-            <a href="mailto:noahyalla@gmail.com">noahyalla@gmail.com</a>
+            <a href="wasasoft.mobilewebdevelopment@wmwd.cloud">wasasoft.mobilewebdevelopment@wmwd.cloud</a>
           </li>
           <li>
             <strong>LinkedIn:</strong>
