updated contact details

--- a/index.html
+++ b/index.html
@@ -111,17 +111,16 @@
         <ul class="contact-list">
           <li>
             <strong>Email:</strong>
-            <a href="wasasoft.mobilewebdevelopment@wmwd.cloud">wasasoft.mobilewebdevelopment@wmwd.cloud</a>
+            <a href="mailto:wasasoft.mobilewebdevelopment@wmwd.cloud">Email me</a>
           </li>
           <li>
             <strong>LinkedIn:</strong>
             <a href="https://www.linkedin.com/in/noah-yalla-348325103/"
-              >linkedin.com/in/noahyalla</a
-            >
+              >My LinkedIn account</a>
           </li>
           <li>
             <strong>GitHub:</strong>
-            <a href="https://github.com/noahyalla">github.com/noahyalla</a>
+            <a href="https://github.com/noahyalla">My Github account</a>
           </li>
         </ul>
       </div>
