added Android app Buai Tracker

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
           <div class="project-card">
             <img src="assets/images/project1.jpg" alt="Project 1 Screenshot" />
             <div class="card-content">
-              <h3>TaskMate Mobile App</h3>
+              <h3>Buai Tracker</h3>
               <p>
-                Cross-platform task management app built with Flutter, featuring
-                real-time sync and notifications.
+                Android app developed for betelnut (buai) chewers in Papua New Guinea
+                who wishes to track their spending and chewing habits.
               </p>
               <a href="https://github.com/noahyalla/project1" class="btn-primary"
                 >View on GitHub</a
