ammended page title and Buai App image extension

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Noah Yalla - Portfolio</title>
+    <title>Noah Yalla - Gigs</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <nav class="navbar">
-        <div class="logo">Portfolio</div>
+        <div class="logo">Gigs</div>
 
         <!-- Mobile menu button -->
         <button class="menu-toggle" id="menu-toggle" aria-label="Toggle menu">☰</button>
@@ -60,7 +60,7 @@
         <h2>Projects</h2>
         <div class="project-grid">
           <div class="project-card">
-            <img src="assets/images/project1.jpg" alt="Project 1 Screenshot" />
+            <img src="assets/images/project1.png" alt="Project 1 Screenshot" />
             <div class="card-content">
               <h3>Buai Tracker</h3>
               <p>
