--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <div class="card-content">
               <h3>Buai Tracker</h3>
               <p>
-                Android app developed for betelnut (buai) chewers in Papua New Guinea
-                who wishes to track their spending and chewing habits.
+                Android app for betelnut (buai) chewers in PNG
+                for tracking spending and chewing habits.
               </p>
               <a href="https://github.com/noahyalla/project1" class="btn-primary"
                 >View on GitHub</a
