added individual project pages

--- a/index.html
+++ b/index.html
@@ -55,54 +55,48 @@
       </div>
     </section>
 
-    <section id="projects">
-      <div class="container">
-        <h2>Projects</h2>
-        <div class="project-grid">
-          <div class="project-card">
-            <img src="assets/images/project1.png" alt="Project 1 Screenshot" />
-            <div class="card-content">
-              <h3>Buai Tracker</h3>
-              <p>
-                Android app for betelnut (buai) chewers in PNG
-                for tracking spending and chewing habits.
-              </p>
-              <a href="https://github.com/noahyalla/project1" class="btn-primary"
-                >View on GitHub</a
-              >
-            </div>
-          </div>
-
-          <div class="project-card">
-            <img src="assets/images/project2.jpg" alt="Project 2 Screenshot" />
-            <div class="card-content">
-              <h3>ShopNow Web App</h3>
-              <p>
-                React & Node.js e-commerce platform with authentication and
-                secure payment integration.
-              </p>
-              <a href="https://github.com/noahyalla/project2" class="btn-primary"
-                >View on GitHub</a
-              >
-            </div>
-          </div>
-
-          <div class="project-card">
-            <img src="assets/images/project3.jpg" alt="Project 3 Screenshot" />
-            <div class="card-content">
-              <h3>Hybrid PWA</h3>
-              <p>
-                Responsive hybrid app built as a progressive web app (PWA) for
-                mobile and desktop users alike.
-              </p>
-              <a href="https://github.com/noahyalla/project3" class="btn-primary"
-                >View on GitHub</a
-              >
-            </div>
-          </div>
+<section id="projects">
+  <div class="container">
+    <h2>Projects</h2>
+    <div class="project-grid">
+      <div class="project-card">
+        <img src="assets/images/project1.png" alt="Buai Tracker App Screenshots" />
+        <div class="card-content">
+          <h3>Buai Tracker</h3>
+          <p>
+            Android app for betelnut (buai) chewers in PNG
+            for tracking spending and chewing habits.
+          </p>
+          <a href="projects/buai-tracker.html" class="btn-primary">See more</a>
         </div>
       </div>
-    </section>
+
+      <div class="project-card">
+        <img src="assets/images/project2.jpg" alt="ShopNow Web App Screenshots" />
+        <div class="card-content">
+          <h3>ShopNow Web App</h3>
+          <p>
+            React & Node.js e-commerce platform with authentication and
+            secure payment integration.
+          </p>
+          <a href="projects/shopnow.html" class="btn-primary">See more</a>
+        </div>
+      </div>
+
+      <div class="project-card">
+        <img src="assets/images/project3.jpg" alt="Hybrid PWA Screenshots" />
+        <div class="card-content">
+          <h3>Hybrid PWA</h3>
+          <p>
+            Responsive hybrid app built as a progressive web app (PWA) for
+            mobile and desktop users alike.
+          </p>
+          <a href="projects/hybrid-pwa.html" class="btn-primary">See more</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
     <section id="contact">
       <div class="container">
