added Buai Tracker Project images

--- a/projects/buai-tracker.html
+++ b/projects/buai-tracker.html
@@ -435,7 +435,7 @@
                 <h1>Buai Tracker</h1>
                 <p class="project-subtitle">Revolutionizing betelnut consumption tracking with an intuitive Android app designed for Papua New Guinea's unique market</p>
                 <div class="project-meta">
-                    <span class="project-date">🕒 4 Months</span>
+                    <span class="project-date">🕒 2 Months</span>
                     <span class="project-status">✅ Completed</span>
                     <span class="project-status">📱 Mobile App</span>
                 </div>
@@ -452,9 +452,19 @@
                     <img src="../assets/images/project1.png" alt="Buai Tracker App Dashboard and Analytics Screens" id="main-image" />
                 </div>
                 <div class="gallery-thumbnails">
-                    <img src="../assets/images/project1.png" alt="Dashboard View" class="thumbnail active" onclick="changeImage(this)" />
-                    <img src="../assets/images/project1.png" alt="Expense Tracking" class="thumbnail" onclick="changeImage(this)" />
-                    <img src="../assets/images/project1.png" alt="Analytics Screen" class="thumbnail" onclick="changeImage(this)" />
+                    <img src="../assets/images/project1/1.png" alt="1" class="thumbnail active" onclick="changeImage(this)" />
+                    <img src="../assets/images/project1/2.png" alt="2" class="thumbnail" onclick="changeImage(this)" />
+                    <img src="../assets/images/project1/3.png" alt="3" class="thumbnail" onclick="changeImage(this)" />
+                    <img src="../assets/images/project1/4.png" alt="4" class="thumbnail" onclick="changeImage(this)" />
+                    <img src="../assets/images/project1/5.png" alt="5" class="thumbnail" onclick="changeImage(this)" />
+                    <img src="../assets/images/project1/6.png" alt="6" class="thumbnail" onclick="changeImage(this)" />
+                    <img src="../assets/images/project1/7.png" alt="7" class="thumbnail" onclick="changeImage(this)" />
+                    <img src="../assets/images/project1/8.png" alt="8" class="thumbnail" onclick="changeImage(this)" />
+                    <img src="../assets/images/project1/9.png" alt="9" class="thumbnail" onclick="changeImage(this)" />
+                    <img src="../assets/images/project1/10.png" alt="10" class="thumbnail" onclick="changeImage(this)" />
+                    <img src="../assets/images/project1/11.png" alt="11" class="thumbnail" onclick="changeImage(this)" />
+                    <img src="../assets/images/project1/12.png" alt="12" class="thumbnail" onclick="changeImage(this)" />
+                    <img src="../assets/images/project1/13.png" alt="13" class="thumbnail" onclick="changeImage(this)" />
                 </div>
             </section>
 
@@ -488,21 +498,17 @@
                                     <strong>Advanced Analytics Dashboard:</strong> Interactive charts and visualizations showing consumption patterns, 
                                     spending trends, and habit formation over time.
                                 </li>
-                                <li>
-                                    <strong>Budget Management System:</strong> Customizable budget limits with proactive notifications and savings 
-                                    recommendations based on spending behavior.
-                                </li>
-                                <li>
+                                <!-- <li>
                                     <strong>Health & Wellness Integration:</strong> Gentle reminders and health tips tailored to consumption patterns, 
                                     promoting awareness and moderation.
-                                </li>
+                                </li> -->
                                 <li>
                                     <strong>Offline-First Architecture:</strong> Complete functionality without internet connectivity, ensuring 
                                     accessibility in remote areas of PNG.
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <strong>Bilingual Interface:</strong> Seamless switching between Tok Pisin and English to cater to diverse user demographics.
-                                </li>
+                                </li> -->
                                 <li>
                                     <strong>Data Privacy & Security:</strong> Local data storage with optional cloud backup, ensuring user privacy 
                                     and data protection.
@@ -520,7 +526,7 @@
                                     <span class="tech-tag">Firebase</span>
                                     <span class="tech-tag">SQLite</span>
                                     <span class="tech-tag">REST API</span>
-                                    <span class="tech-tag">Google Maps</span>
+                                    <!-- <span class="tech-tag">Google Maps</span> -->
                                     <span class="tech-tag">Provider</span>
                                     <span class="tech-tag">Hive</span>
                                 </div>
@@ -563,6 +569,10 @@
                                 <li>
                                     <strong>Marketplace Expansion:</strong> Develop an integrated marketplace connecting consumers directly 
                                     with betelnut vendors for seamless transactions.
+                                </li>
+                                                                <li>
+                                    <strong>Budget Management System:</strong> Customizable budget limits with proactive notifications and savings 
+                                    recommendations based on spending behavior.
                                 </li>
                             </ul>
                         </section>
