edited project page for Buai Tracker v3

--- a/projects/buai-tracker.html
+++ b/projects/buai-tracker.html
@@ -886,55 +886,55 @@
         <!-- Carousel Slides -->
         <div class="carousel-slide active">
             <img src="../assets/images/project1/1.png" alt="App Dashboard" class="carousel-image">
-            <div class="image-caption">Dashboard - Overview of spending and consumption analytics</div>
+            <div class="image-caption">Home Page - unauthenticated user</div>
         </div>
         <div class="carousel-slide">
             <img src="../assets/images/project1/2.png" alt="Expense Tracking" class="carousel-image">
-            <div class="image-caption">Expense Tracking - Detailed spending analysis and categorization</div>
+            <div class="image-caption">Home Page - authenticated user</div>
         </div>
         <div class="carousel-slide">
             <img src="../assets/images/project1/3.png" alt="Analytics View" class="carousel-image">
-            <div class="image-caption">Analytics - Consumption patterns and spending insights</div>
+            <div class="image-caption">Home Page - authenticated user</div>
         </div>
         <div class="carousel-slide">
             <img src="../assets/images/project1/4.png" alt="Budget Setup" class="carousel-image">
-            <div class="image-caption">Budget Management - Set and track spending limits</div>
+            <div class="image-caption">Sign in page</div>
         </div>
         <div class="carousel-slide">
             <img src="../assets/images/project1/5.png" alt="Spending Report" class="carousel-image">
-            <div class="image-caption">Spending Reports - Comprehensive financial overview</div>
+            <div class="image-caption">SRegistration page</div>
         </div>
         <div class="carousel-slide">
             <img src="../assets/images/project1/6.png" alt="Habit Tracking" class="carousel-image">
-            <div class="image-caption">Habit Tracking - Monitor consumption patterns over time</div>
+            <div class="image-caption">Profile page</div>
         </div>
         <div class="carousel-slide">
             <img src="../assets/images/project1/7.png" alt="Settings" class="carousel-image">
-            <div class="image-caption">Settings - Customize app preferences and notifications</div>
+            <div class="image-caption">Province stats</div>
         </div>
         <div class="carousel-slide">
             <img src="../assets/images/project1/8.png" alt="Profile" class="carousel-image">
-            <div class="image-caption">User Profile - Personal information and account settings</div>
+            <div class="image-caption">Province stats</div>
         </div>
         <div class="carousel-slide">
             <img src="../assets/images/project1/9.png" alt="Notifications" class="carousel-image">
-            <div class="image-caption">Notifications - Alerts and reminders for better tracking</div>
+            <div class="image-caption">Community chat - for regular posts and sale toksave</div>
         </div>
         <div class="carousel-slide">
             <img src="../assets/images/project1/10.png" alt="Statistics" class="carousel-image">
-            <div class="image-caption">Statistics - Detailed charts and data visualization</div>
+            <div class="image-caption">This is where you add your buai transactions</div>
         </div>
         <div class="carousel-slide">
             <img src="../assets/images/project1/11.png" alt="Export Data" class="carousel-image">
-            <div class="image-caption">Data Export - Backup and share your tracking data</div>
+            <div class="image-caption">Insight into your personal buai habits</div>
         </div>
         <div class="carousel-slide">
             <img src="../assets/images/project1/12.png" alt="Help & Support" class="carousel-image">
-            <div class="image-caption">Help & Support - User guidance and assistance</div>
+            <div class="image-caption">Insight into your personal buai habits</div>
         </div>
         <div class="carousel-slide">
             <img src="../assets/images/project1/13.png" alt="About App" class="carousel-image">
-            <div class="image-caption">About - App information and version details</div>
+            <div class="image-caption">Sale toksave form</div>
         </div>
 
         <div class="carousel-indicators">
