made project page responsive

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2025 Noah Yalla. Built with ❤️ and creativity.</p>
+      <p>&copy; 2025 Noah. Built with ❤️ and creativity.</p>
     </footer>
 
     <script>
