edited page titles and footer

--- a/projects/buai-tracker.html
+++ b/projects/buai-tracker.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buai Tracker - Mobile App | Noah Yalla</title>
+    <title>Buai Tracker - Mobile App | Noah</title>
     <link rel="stylesheet" href="../styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
@@ -998,7 +998,7 @@
 </div>
 
     <footer>
-        <p>&copy; 2025 Noah Yalla. Built with ❤️ and creativity.</p>
+        <p>&copy; 2025 Noah. Built with ❤️ and creativity.</p>
     </footer>
 
     <script>
