added privacy and t&c statements

--- a/projects/buai-tracker.html
+++ b/projects/buai-tracker.html
@@ -874,6 +874,18 @@
                                 </li>
                             </ul>
                         </section>
+
+<section class="project-section">
+    <h2>Legal & Privacy</h2>
+    <p>
+        Your privacy and data security are important to us. Review our policies to understand how we handle your information.
+    </p>
+    <div class="legal-links" style="margin-top: 20px;">
+        <a href="buai-tracker-privacy&t&c.html" class="project-link" style="background: linear-gradient(135deg, #6c757d, #495057);">
+            📄 Privacy Policy & Terms & Conditions
+        </a>
+    </div>
+</section>
                     </div>
 
                     <!-- Sidebar -->
