added privacy and t&c statements v2

--- a/projects/buai-tracker-privacy&t&c.html
+++ b/projects/buai-tracker-privacy&t&c.html
@@ -423,7 +423,7 @@
     <main class="privacy-container">
         <div class="container">
             <!-- Back Button -->
-            <a href="buai-tracker-details.html" class="back-btn">
+            <a href="buai-tracker.html" class="back-btn">
                 ← Back to Buai Tracker
             </a>
 
@@ -502,7 +502,7 @@
                 <div class="contact-info">
                     <h3>Contact Us</h3>
                     <p>If you have any questions about these Terms, please contact us at:</p>
-                    <a href="mailto:support@buaitracker.com" class="contact-email">support@buaitracker.com</a>
+                    <a href="mailto:wasasoft.mobilewebdevelopment@wmwd.cloud" class="contact-email">wasasoft.mobilewebdevelopment@wmwd.cloud</a>
                 </div>
             </section>
 
@@ -572,7 +572,7 @@
                 <div class="contact-info">
                     <h3>Contact Us</h3>
                     <p>If you have any questions or concerns about this Privacy Policy or your data, please contact the app creator at:</p>
-                    <a href="mailto:yombayalla@gmail.com" class="contact-email">yombayalla@gmail.com</a>
+                    <a href="mailto:wasasoft.mobilewebdevelopment@wmwd.cloud" class="contact-email">wasasoft.mobilewebdevelopment@wmwd.cloud</a>
                 </div>
             </section>
         </div>
