edited buai tracker privacy page

--- a/projects/buai-tracker-privacy&t&c.html
+++ b/projects/buai-tracker-privacy&t&c.html
@@ -16,6 +16,10 @@
             box-sizing: border-box;
         }
 
+        html {
+            scroll-behavior: smooth;
+        }
+
         body {
             font-family: 'Poppins', sans-serif;
             line-height: 1.6;
@@ -111,6 +115,7 @@
             border: none;
             font-size: 1.5rem;
             cursor: pointer;
+            z-index: 1001;
         }
 
         /* Main Content */
@@ -174,6 +179,13 @@
             justify-content: center;
             margin-bottom: 40px;
             border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+            overflow-x: auto;
+            scrollbar-width: none; /* Firefox */
+            -ms-overflow-style: none; /* IE and Edge */
+        }
+
+        .content-tabs::-webkit-scrollbar {
+            display: none; /* Chrome, Safari, Opera */
         }
 
         .tab-btn {
@@ -186,6 +198,8 @@
             cursor: pointer;
             transition: all 0.3s ease;
             position: relative;
+            white-space: nowrap;
+            flex-shrink: 0;
         }
 
         .tab-btn.active {
@@ -352,24 +366,47 @@
 
             .nav-links {
                 position: fixed;
-                top: 80px;
+                top: 0;
                 right: -100%;
                 flex-direction: column;
                 background: rgba(255, 255, 255, 0.95);
                 backdrop-filter: blur(10px);
-                width: 80%;
-                height: calc(100vh - 80px);
-                padding: 40px 20px;
+                width: 100%;
+                height: 100vh;
+                padding: 80px 20px 40px;
                 transition: right 0.3s ease;
                 box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
+                justify-content: flex-start;
+                gap: 20px;
             }
 
             .nav-links.active {
                 right: 0;
             }
 
+            .nav-links li {
+                width: 100%;
+                text-align: center;
+            }
+
+            .nav-links a {
+                display: block;
+                padding: 15px;
+                font-size: 1.2rem;
+                border-radius: 8px;
+                transition: all 0.3s ease;
+            }
+
+            .nav-links a:hover {
+                background: rgba(0, 119, 255, 0.1);
+            }
+
             body.dark-mode .nav-links {
                 background: rgba(30, 30, 46, 0.95);
+            }
+
+            .privacy-container {
+                padding: 120px 15px 40px;
             }
 
             .policy-card {
@@ -380,15 +417,24 @@
                 padding: 12px 20px;
                 font-size: 1rem;
             }
+
+            .content-tabs {
+                justify-content: flex-start;
+            }
+
+            .page-header {
+                margin-bottom: 30px;
+            }
         }
 
         @media (max-width: 480px) {
             .privacy-container {
-                padding: 120px 15px 40px;
+                padding: 100px 10px 30px;
             }
 
             .policy-card {
                 padding: 20px;
+                margin-bottom: 20px;
             }
 
             .section-title {
@@ -398,6 +444,50 @@
             .tab-btn {
                 padding: 10px 15px;
                 font-size: 0.9rem;
+            }
+
+            .back-btn {
+                padding: 10px 20px;
+                font-size: 0.9rem;
+            }
+
+            .contact-info {
+                padding: 20px;
+            }
+
+            .contact-email {
+                font-size: 1rem;
+            }
+
+            .highlight-box {
+                padding: 15px;
+            }
+        }
+
+        @media (max-width: 360px) {
+            .navbar {
+                padding: 15px 0;
+            }
+
+            .logo {
+                font-size: 1.5rem;
+            }
+
+            .privacy-container {
+                padding: 90px 10px 30px;
+            }
+
+            .policy-card {
+                padding: 15px;
+            }
+
+            .section-title {
+                font-size: 1.3rem;
+            }
+
+            .tab-btn {
+                padding: 8px 12px;
+                font-size: 0.85rem;
             }
         }
     </style>
@@ -622,13 +712,23 @@
 
         menuToggle.addEventListener('click', () => {
             navLinks.classList.toggle('active');
+            menuToggle.textContent = navLinks.classList.contains('active') ? '✕' : '☰';
         });
 
         // Close menu when clicking on a link
         document.querySelectorAll('.nav-links a').forEach(link => {
             link.addEventListener('click', () => {
                 navLinks.classList.remove('active');
+                menuToggle.textContent = '☰';
             });
+        });
+
+        // Close menu when clicking outside
+        document.addEventListener('click', (e) => {
+            if (!navLinks.contains(e.target) && !menuToggle.contains(e.target)) {
+                navLinks.classList.remove('active');
+                menuToggle.textContent = '☰';
+            }
         });
     </script>
 </body>
