--- a/projects/buai-tracker-privacy&t&c.html
+++ b/projects/buai-tracker-privacy&t&c.html
@@ -307,8 +307,8 @@
         footer {
             text-align: center;
             padding: 30px 0;
-            background: rgba(255, 255, 255, 0.8);
-            backdrop-filter: blur(10px);
+            background: #000000;
+            color: #ffffff;
             border-top: 1px solid rgba(0, 0, 0, 0.1);
             margin-top: 60px;
         }
@@ -355,7 +355,8 @@
         }
 
         body.dark-mode footer {
-            background: rgba(30, 30, 46, 0.8);
+            background: #000000;
+            color: #ffffff;
         }
 
         /* Responsive Design */
@@ -669,7 +670,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Buai Tracker. Built with ❤️ and creativity.</p>
+        <p>&copy; 2025 Noah. Built with ❤️ and creativity.</p>
     </footer>
 
     <script>
